--- a/styles/base.css
+++ b/styles/base.css
@@ -8,6 +8,7 @@ header {
     align-items: center;
     padding: 1rem;
     border-bottom: 1px solid #000;
+    position: relative;
 }
 .logo { width: 40px; height: 40px; border: 1px solid #000; }
 
@@ -15,17 +16,28 @@ header {
 #menu-toggle.open::before { content: "X"; }
 #menu-toggle {
     display: none;
-    font-size: 2rem;
-    background: black;
+    font-size: 1rem;
     border: none;
     cursor: pointer;
     
 }
 
 
-nav { background-color: #333; }
-nav ul { list-style: none; display: none; flex-direction: row; }
+nav { background-color: #333; 
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+
+}
+nav ul { list-style: none; display: none; flex-direction: column; gap: 0; margin: 0; padding: 0; }
 nav ul.show { display: flex; }
+nav li{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
 nav a {
     display: block;
     padding: 1rem;
@@ -34,7 +46,7 @@ nav a {
     text-align: center;
     border-bottom: 1px solid #555;
 }
-nav a:hover { background-color: #000; }
+nav a:hover { background-color:rgba(99, 160, 152, 0.705); }
 
 main { padding: 1rem; max-width: 900px; margin: 0 auto; }
 h1 { margin-bottom: 1rem; }
