--- a/styles/large.css
+++ b/styles/large.css
@@ -5,33 +5,52 @@
     }
 
     header {
-        
-        padding: 1rem 2rem 3rem;
+        background-color: rgba(0, 0, 255, 0.548);
+        display: grid;
+        grid-template-columns: fr;
+        grid-template-rows: auto auto;
+        justify-content: unset;
+        align-items: center;
+        padding: 0;
+        border-bottom: none;
+
+    }
+    .logo-contairner{
+        grid: 1;
+        justify-self: center;
+        padding: 1.5rem;       
+        text-align: center;
     }
 
     nav ul {
-        display: block; 
+        display: flex; 
         flex-direction: row;
-        justify-content: center; 
-        gap: 20px;
-        padding-right: 2rem;
+        justify-content: center;
+        align-items: center; 
+        gap: 30px;
+        padding: 1rem 0;
     }
 
     nav {
-        background-color: blue;
+        background-color: rgba(0, 0, 255, 0.548);
+        grid-row: 2;
         justify-content: center; 
+        position: static;
+        width: 100%;
+        margin-top: 10px;
+        box-shadow: none;
     }
     
     nav a {
         border-bottom: none; 
         padding: 1rem 1.5rem;
+        display: inline-block;
     }
-
 
     .main-grid {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 20px;
+        gap: 5px;
         align-items: start;
     }
     .card:nth-of-type(1) {
