--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -106,7 +106,22 @@
     }
 
     .footer-base {
-        text-align: right;
-        font-size: 0.9rem;
+        text-align: left;
+        font-size: 1rem;
+    }
+
+    .join-container {
+        grid-template-columns: 2fr 1fr;
+        max-width: 1200px;
+        margin: 20px auto;
+        align-items: start;
+    }
+
+    .membership-cards {
+        display: block;
+    }
+
+    .card-membership {
+        margin-bottom: 20px;
     }
 }
