--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,4 +1,3 @@
-
 @media (min-width: 64rem) {
 
     #menu-btn {
@@ -27,19 +26,16 @@
         transition: background-color 0.3s;
     }
     
-    
     nav ul li a:hover {
         background-color: rgba(255, 255, 255, 0.2);
         color: white;
     }
 
-    
     main {
         max-width: 1200px; 
         margin: 0 auto;    
     }
 
-    
     .home-grid {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -58,7 +54,6 @@
         height: 100%; 
     }
 
-    
     .weather {
         grid-column: 3 / 4;
         margin: 0;
@@ -111,21 +106,23 @@
     }
 
     .join-container {
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 2fr 1fr; 
         max-width: 1200px;
-        margin: 20px auto;
+        margin: 30px auto;
+        gap: 40px; 
         align-items: start;
     }
 
     .membership-cards {
         display: block;
+        position: sticky;
+        top: 20px; 
     }
 
     .card-membership {
         margin-bottom: 20px;
     }
-    /* --- DISCOVER PAGE STYLES (Desktop) --- */
-    
+
     .discover-grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-areas: 
@@ -135,7 +132,6 @@
         margin: 0 auto;
     }
 
-    /* for the discover*/
     .place-card:hover {
         transform: scale(1.05);
         box-shadow: 0 10px 20px rgba(0,0,0,0.2);
